deploy/belafonte/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: belafonte
  namespace: belafonte
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: belafonte
